--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-router-dom": "^6.23.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
