--- a/package.json
+++ b/package.json
@@ -10,24 +10,33 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@tanstack/react-query": "^5.37.1",
+    "axios": "^1.6.0",
+    "express": "^4.18.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "^6.23.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nrwl/express": "^19.0.6",
     "@nx/cypress": "19.0.6",
     "@nx/devkit": "19.0.6",
     "@nx/eslint": "19.0.6",
     "@nx/eslint-plugin": "19.0.6",
+    "@nx/express": "19.0.6",
     "@nx/jest": "19.0.6",
     "@nx/js": "19.0.6",
+    "@nx/node": "19.0.6",
     "@nx/playwright": "19.0.6",
     "@nx/react": "19.0.6",
     "@nx/vite": "19.0.6",
     "@nx/web": "19.0.6",
+    "@nx/webpack": "19.0.6",
     "@nx/workspace": "19.0.6",
     "@playwright/test": "^1.36.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.8.0",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.3.85",
@@ -52,15 +61,18 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
     "nx": "19.0.6",
     "postcss": "8.4.21",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
     "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
     "vite": "~5.0.0",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "webpack-cli": "^5.1.4"
   }
 }
