--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tanstack/react-query": "^5.37.1",
     "axios": "^1.6.0",
     "express": "^4.18.1",
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "^6.23.1",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@nrwl/express": "^19.0.6",
