--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "nx build",
     "start": "nx serve",
     "lint": "nx lint",
-    "test": "nx test"
+    "test": "nx test",
+    "serve-with-api": "nx run-many -t serve api lms-fe"
   },
   "private": true,
   "dependencies": {
